--- a/popup.css
+++ b/popup.css
@@ -1,4 +1,15 @@
 /* General Style */
+* {
+    box-sizing: border-box;
+}
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+.premium-pannel-page,
+.more-pannel {
+    overflow-x: hidden;
+}
 body {
     background-color: black;
     color: white;
